[gd_scene load_steps=5 format=3 uid="uid://bf57nspdjc6pp"]

[ext_resource type="Script" path="res://Scripts/UI/TinkerUI.gd" id="1_jwllu"]
[ext_resource type="PackedScene" uid="uid://5uauapypugre" path="res://Scenes/UI/Inventory/item_button.tscn" id="2_khqlb"]
[ext_resource type="Script" path="res://Scripts/UI/TinkerLoadItem.gd" id="3_ekt7q"]
[ext_resource type="Texture2D" uid="uid://c468jbf466btk" path="res://Graphics/UI/simple-arrow-sign-png.webp" id="4_s874v"]

[node name="TinkerUI" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -117.0
offset_right = 185.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwllu")
item_button = ExtResource("2_khqlb")

[node name="Default" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Default"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Default"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 4.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Tinkerer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Default"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 28.0
offset_right = -5.0
offset_bottom = 32.0
grow_horizontal = 2

[node name="Top" type="Button" parent="Default"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -59.0
offset_right = 115.0
offset_bottom = 5.0
grow_vertical = 2
script = ExtResource("3_ekt7q")

[node name="Label" type="Label" parent="Default/Top"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Base" type="Button" parent="Default"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 52.0
offset_top = 26.0
offset_right = 116.0
offset_bottom = 90.0
grow_vertical = 2
script = ExtResource("3_ekt7q")

[node name="Label" type="Label" parent="Default/Base"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Default"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 52.0
offset_top = 13.0
offset_right = 115.0
offset_bottom = 17.0
grow_vertical = 2

[node name="Arrow" type="TextureRect" parent="Default"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -14.0
offset_right = 172.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_s874v")

[node name="Output" type="TextureRect" parent="Default"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 47.0
offset_top = -23.0
offset_right = 111.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Default/Output"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Build" type="Button" parent="Default"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 47.0
offset_top = 42.0
offset_right = 111.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 9
text = "Build"

[node name="MaterialSelection" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = -150.0
offset_right = 145.0
offset_bottom = -4.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="MaterialSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="MaterialSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 11.0
offset_right = -15.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="Clear" type="Button" parent="MaterialSelection/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Label" type="Label" parent="MaterialSelection/GridContainer/Clear"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Clear"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Default/Top" to="." method="_on_pressed" binds= [true]]
[connection signal="pressed" from="Default/Base" to="." method="_on_pressed" binds= [false]]
[connection signal="pressed" from="Default/Build" to="." method="_on_build_pressed"]
[connection signal="pressed" from="MaterialSelection/GridContainer/Clear" to="." method="_on_clear_pressed"]
